# Odin

./: .dockerignore  Cargo.toml  Dockerfile  WIKI_MANUAL.md
.github/workflows/: build.yml
docs/: asgard-inspection-runbook.md
docs/iso_29110/: SI_01_Implementation_Report.md
k8s/: 01-deployment.yaml  02-ops-cronjobs.yaml
src/: agents.rs  bridge.rs  chat.rs  discord.rs  findings.rs  main.rs  policy.rs  report.rs  thor.rs
static/: chat.html  index.html
thor/: Cargo.toml
thor/policies/: active_response.rego  create.rego  merge.rego
thor/src/: lib.rs
