[package]
name = "Odin"
version = "0.2.0"
edition = "2024"

[workspace]
members = ["thor"]

[dependencies]
thor = { path = "thor" }
axum = { version = "0.8", features = ["macros"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
futures-util = "0.3"
async-stream = "0.3"
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
once_cell = "1"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }
